--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
     </ul>
 </header>
 <main>
-    <section class="first-screen">
+
+
+<section class="first-screen">
     <h1>Nothing Ear</h1>
     <div class="first-screen-inner"><p>Беспроводные наушники-вкладыши с активным шумоподавлением, которые подарят чистейший звук</p></div>
-    </section>
+    <img src="images/first-screen.png" alt="Nothing Ear">
+</section>
+
+
+
     <section class="models" id="models">
     <h2>Наушники Ear White</h2>
   Купить
