--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
 </header>
 <main>
 
-
 <section class="first-screen">
     <h1>Nothing Ear</h1>
-    <div class="first-screen-inner"><p>Беспроводные наушники-вкладыши с активным шумоподавлением, которые подарят чистейший звук</p></div>
-    <img src="images/first-screen.png" alt="Nothing Ear">
+    <p>Беспроводные наушники-вкладыши с активным шумоподавлением, которые подарят чистейший звук</p>
+    <div class="first-screen-inner"></div>
+    
 </section>
 
-
-
-    <section class="models" id="models">
+<section class="models" id="models">
     <h2>Наушники Ear White</h2>
   Купить
     <h2>Наушники Ear Black</h2>
