--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
 </section>
 
 <section class="models" id="models">
+    <div class="model-item">
     <h2>Наушники Ear White</h2>
-  Купить
+    Купить
+    </div>
+    <div class="model-item">
     <h2>Наушники Ear Black</h2>
   Купить
-    </section>
+</div>
+</section>
 
     <section class="functions" id="functions">
         <h2>Сделайте их вашими</h2>
