--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <section class="models" id="models">
     <div class="model-item">
     <h2>Наушники Ear White</h2>
-    Купить
+    <a href="#">Купить</a>
     </div>
     <div class="model-item">
     <h2>Наушники Ear Black</h2>
-  Купить
-</div>
+    <a href="#">Купить</a>
+    </div>
 </section>
 
     <section class="functions" id="functions">
