--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <section class="models" id="models">
     <div class="model-item">
+        <img src="images/ear-white.png">
     <h2>Наушники Ear White</h2>
     <a href="#">Купить</a>
     </div>
