--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 
 <section class="models" id="models">
     <div class="model-item">
-        <img src="images/ear-white.png">
+    <img src="images/ear-white.png">
     <h2>Наушники Ear White</h2>
+    <img src="images/ear-white-icon.png" class="model-icon">
     <a href="#">Купить</a>
     </div>
     <div class="model-item">
+    <img src="images/ear-black.png">
     <h2>Наушники Ear Black</h2>
+    <img src="images/ear-black-icon.png" class="model-icon">
     <a href="#">Купить</a>
     </div>
 </section>
