--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="trainings" id="trainings">
     <h2>Ударные тренировки. Нет поту</h2>
     
-        <img src="images/ipx-icon.png" alt="ipx4">
+        <img src="images/ipx4-icon.png" alt="IPX4">
         <p>Каждый наушник имеет композитную сетчатую конструкцию для повышения защиты от пота и воды со степенью защиты ipx4.</p>
     
         <img src="images/pause-icon.png" alt="Pause">
