--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h2>Наушники nothing ear (1) используют технологию clear voice и три микрофона высокой четкости</h2>
     <p>Пока вы говорите, передовые алгоритмы анализируют миллион голосовых и звуковых комбинаций (даже при скорости ветра до 40 км/ч), чтобы изолировать и усиливать ваш голос с удивительной точностью.
     </p>
-    <p>Купить</p>
+    <a href="#">Купить</a>
 </section>
 
     <section class="clear-sound">
