--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
     <section class="clear-sound">
         <h2>Чистый звук, точно настроенный</h2>
-        <img src="images/clear-sound.png">
+        <div class="clear-sound-inner">
         <p>Мы расчистили путь для превосходного звука, голоса и связи</p>
+        </div>
     </section>
 
     <section class="contacts" id="contacts">
