--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <li><a href="#trainings" title="Тренировки">Тренировки</a></li>
         <li><a href="#social" title="Социальные сети">Социальные сети</a></li>
         </ul>
-    <p>nothing</p>
+    <p class="copyright">nothing</p>
 </footer>
 </body>
 </html>
