--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
 </main>
 
 <footer class="footer">
-    <ul class="footer-menu">
+    <div class="footer-inner">
+    <ul>
         <li><a href="#models" title="Модели">Модели</a></li>
         <li><a href="#functions" title="Функции">Функции</a></li>
         <li><a href="#trainings" title="Тренировки">Тренировки</a></li>
         <li><a href="#social" title="Социальные сети">Социальные сети</a></li>
         </ul>
+    </div>    
     <p class="copyright">nothing</p>
 </footer>
 </body>
