--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <footer class="footer">
     <div class="footer-inner">
-    <ul>
+    <ul class="footer-menu">
         <li><a href="#models" title="Модели">Модели</a></li>
         <li><a href="#functions" title="Функции">Функции</a></li>
         <li><a href="#trainings" title="Тренировки">Тренировки</a></li>
