--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="#models" title="Модели">Модели</a></li>
     <li><a href="#functions" title="Функции">Функции</a></li>
     <li><a href="#trainings" title="Тренировки">Тренировки</a></li>
-    <li><a href="#social" title="Социальные сети">Социальные сети</a></li>
+    <li><a href="#contacts" title="Социальные сети">Социальные сети</a></li>
     </ul>
 </header>
 <main>
@@ -94,7 +94,7 @@
         <li><a href="#models" title="Модели">Модели</a></li>
         <li><a href="#functions" title="Функции">Функции</a></li>
         <li><a href="#trainings" title="Тренировки">Тренировки</a></li>
-        <li><a href="#social" title="Социальные сети">Социальные сети</a></li>
+        <li><a href="#contacts" title="Социальные сети">Социальные сети</a></li>
     </ul>
     <p class="copyright">nothing</p>
 </footer>
